fixed html horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .jumbotron {
   padding-top: 6rem;
   background-color: #e2edff;
